2007-11-12  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_options PS_dump_prologue_file PS_open_prologue_file
	PS_load_glyphlist) term/PostScript/aglfn.txt:  Move the list of Adobe-
	recommended glyph names (aglfn) to an external file.  Add an option
	'set term post {{no}adobeglyphnames}' to control whether UTF-8 
	characters outside of the Latin1 set are refered to by their generic
	name (e.g. /uni03B1) or their aglfn name (e.g. /alpha). 

2007-11-12  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/Makefile.in: Include cairo.trm in CORETERM list

	* docs/gnuplot-ja.doc docs/term-ja.diff:  Sync to version 1.457

2007-11-11  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_options PS_load_fontfile PS_load_fontfiles):
	Add a field to the fontfile structure to hold the font name.
	Use this to reencode the font immediately after it is read in, rather
	than the first time of use.  This fixes a bug if the first use is at
	the start of enhanced text processing.

2007-11-11  Philipp K Janert

	* docs/gnuplot.doc: Correct an error in "help show palette".

2007-11-11  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_options): Accept *.otf fonts.

	* term/post.trm (ENHPS_OPEN ENHPS_WRITEC) term/PostScript/prologue.ps):
	Add UTF-8 encoding support for enhanced text mode.

	* term/PostScript/unicode_small.map term/PostScript/unicode_big.map
	term/PostScript/unicode_maps.README:  Provide sample files and a README
	for constructing UTF-8 encoded Type 1 fonts for the postscript terminal
	to use.  Many thanks to Thomas Henlich for the initial example and
	explanation.

2007-11-11  Thomas Henlich  <thenlich@users.sourceforge.net>

	* term/post.trm (PS_put_text) term/aglfn.h term/PostScript/utf-8.ps
	src/util.h src/util.c (utf8_getmore utf8toulong):

	Add UTF-8 encoding support for PostScript terminal. This implementation
	supports PostScript Type1 fonts that use glyph names conforming to the